--- a/.k8s/live/staging/ingress.yaml
+++ b/.k8s/live/staging/ingress.yaml
@@ -21,6 +21,7 @@ metadata:
         deny 223.178.212.103;
         deny 223.178.213.18;
         deny 195.248.243.174;
+        deny 116.204.211.188;
         if ($http_spider_name ~* "crawlergo") {
           return 403;
         }
