--- a/.k8s/live/dev/deployment.yaml
+++ b/.k8s/live/dev/deployment.yaml
@@ -67,6 +67,8 @@ spec:
               value: enabled
             - name: LAA_REFERENCES
               value: 'true'
+            - name: DEFENDANTS_SEARCH
+              value: 'true'
             - name: COURT_DATA_ADAPTOR_API_UID
               valueFrom:
                 secretKeyRef:
