--- a/.k8s/live/uat/deployment.yaml
+++ b/.k8s/live/uat/deployment.yaml
@@ -65,6 +65,8 @@ spec:
               value: enabled
             - name: LAA_REFERENCES
               value: 'true'
+            - name: DEFENDANTS_SEARCH
+              value: 'true'
             - name: DISPLAY_RAW_RESPONSES
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
