--- a/.k8s/live/production/deployment.yaml
+++ b/.k8s/live/production/deployment.yaml
@@ -63,6 +63,8 @@ spec:
               value: 'UA-131160087-15'
             - name: LAA_REFERENCES
               value: 'true'
+            - name: DEFENDANTS_SEARCH
+              value: 'true'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
