--- a/.k8s/live/uat/deployment.yaml
+++ b/.k8s/live/uat/deployment.yaml
@@ -66,7 +66,7 @@ spec:
             - name: LAA_REFERENCES
               value: 'true'
             - name: DEFENDANTS_SEARCH
-              value: 'true'
+              value: 'false'
             - name: DISPLAY_RAW_RESPONSES
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
