--- a/.k8s/live/production/deployment.yaml
+++ b/.k8s/live/production/deployment.yaml
@@ -64,7 +64,7 @@ spec:
             - name: LAA_REFERENCES
               value: 'true'
             - name: DEFENDANTS_SEARCH
-              value: 'false'
+              value: 'true'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
