Circle CI: attach resources needed for build to workspace Added node modules, ruby gems and webpacker files to workspace from test-build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,6 +227,12 @@ jobs:
     steps:
       - checkout
       - build-base
+      - persist_to_workspace:
+          root: tmp
+          paths: 
+            - node_modules
+            - public/packs-test
+            - ~/vendor/bundle
 
   linter-tests:
     executor: test-executor
