Remove bundle folder from workspace, attach tmp workspace to job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,12 +227,12 @@ jobs:
     steps:
       - checkout
       - build-base
+      - *attach-tmp-workspace
       - persist_to_workspace:
           root: tmp
           paths: 
             - node_modules
             - public/packs-test
-            - ~/vendor/bundle
 
   linter-tests:
     executor: test-executor
