--- a/.k8s/live/dev/deployment.yaml
+++ b/.k8s/live/dev/deployment.yaml
@@ -69,6 +69,8 @@ spec:
               value: 'true'
             - name: DEFENDANTS_SEARCH
               value: 'true'
+            - name: HEARING
+              value: 'true'
             - name: COURT_DATA_ADAPTOR_API_UID
               valueFrom:
                 secretKeyRef:
