--- a/.k8s/live/uat/deployment.yaml
+++ b/.k8s/live/uat/deployment.yaml
@@ -67,6 +67,8 @@ spec:
               value: 'true'
             - name: DEFENDANTS_SEARCH
               value: 'true'
+            - name: HEARING
+              value: 'true'
             - name: DISPLAY_RAW_RESPONSES
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
