--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ references:
     save_cache:
       key: v4-bundle-{{ checksum "Gemfile.lock" }}
       paths:
-        - ~/vendor/bundle
+        - ~/.bundle
 
   _restore-assets: &restore-assets
     restore_cache:
