--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,10 @@ references:
       command: |
         .circleci/build.sh
 
+  _master-only: &master-only
+    filters:
+      branches:
+        only: master
 # ------------------
 # EXECUTORS
 # ------------------
@@ -325,26 +329,10 @@ jobs:
 # ------------------
 workflows:
   version: 2
-  test-build-deploy-master:
+  build-deploy-master:
     jobs:
-      - build-test-container:
-          filters:
-            branches:
-              only:
-                - master
-      - linter-tests:
-          requires:
-            - build-test-container
-      - rspec-tests:
-          requires:
-            - build-test-container
-      - upload-test-coverage:
-          requires:
-            - rspec-tests
       - build-app-container:
-          requires:
-            - linter-tests
-            - rspec-tests
+          <<: *master-only
       - deploy-dev:
           context: laa-court-data-ui-live-dev
           requires:
