Enable failing haml-lint for testing

--- a/.haml-lint_todo.yml
+++ b/.haml-lint_todo.yml
@@ -14,7 +14,7 @@ linters:
 
   # Offense count: 189
   SpaceInsideHashAttributes:
-    enabled: false
+    enabled: true
 
   # Offense count: 1
   ViewLength:
