Revert last commit

--- a/.haml-lint_todo.yml
+++ b/.haml-lint_todo.yml
@@ -14,7 +14,7 @@ linters:
 
   # Offense count: 189
   SpaceInsideHashAttributes:
-    enabled: true
+    enabled: false
 
   # Offense count: 1
   ViewLength:
