--- a/.haml-lint_todo.yml
+++ b/.haml-lint_todo.yml
@@ -67,7 +67,7 @@ linters:
 
   # Offense count: 19
   Indentation:
-    exclude:
+    include:
       - "app/views/feedback/new.html.haml"
       - "app/views/hearings/_hearing_result.html.haml"
       - "app/views/hearings/_hearing_result_v2.html.haml"
