AAC-710 - HAML linting TrailingWhitespace issues fixed

--- a/.haml-lint_todo.yml
+++ b/.haml-lint_todo.yml
@@ -55,7 +55,7 @@ linters:
 
   # Offense count: 5
   TrailingWhitespace:
-    exclude:
+    include:
       - "app/views/feedback/new.html.haml"
       - "app/views/layouts/_cookie_banner.html.haml"
       - "app/views/layouts/_flashes.html.haml"
