Fix haml-lint MultilinePipe

--- a/.haml-lint_todo.yml
+++ b/.haml-lint_todo.yml
@@ -44,6 +44,7 @@ linters:
       - "app/views/prosecution_cases/cd_api/_raw_response.html.haml"
 
   # Offense count: 1
-  MultilinePipe:
+  IdNames:
     exclude:
       - "app/views/devise/shared/_error_messages.html.haml"
+
