aac-701 / remove spaceinsidehashattributes errors in HAML files

--- a/.haml-lint_todo.yml
+++ b/.haml-lint_todo.yml
@@ -13,7 +13,7 @@ linters:
 
   # Offense count: 189
   SpaceInsideHashAttributes:
-    enabled: false
+    enabled: true
 
   # Offense count: 1
   ViewLength:
@@ -47,4 +47,3 @@ linters:
   IdNames:
     exclude:
       - "app/views/devise/shared/_error_messages.html.haml"
-
