--- a/.k8s/live/production/deployment.yaml
+++ b/.k8s/live/production/deployment.yaml
@@ -65,6 +65,8 @@ spec:
               value: 'true'
             - name: HEARING
               value: 'false'
+            - name: HEARING_SUMMARIES
+              value: 'true'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
