Set hearing environment variable to true in all environments.
Update kubernetes deployment config and set HEARING env to true.

--- a/.k8s/live/production/deployment.yaml
+++ b/.k8s/live/production/deployment.yaml
@@ -64,7 +64,7 @@ spec:
             - name: DEFENDANTS_SEARCH
               value: 'true'
             - name: HEARING
-              value: 'false'
+              value: 'true'
             - name: HEARING_SUMMARIES
               value: 'true'
             - name: RAILS_LOG_TO_STDOUT
