--- a/.k8s/live/production/deployment.yaml
+++ b/.k8s/live/production/deployment.yaml
@@ -66,7 +66,7 @@ spec:
             - name: HEARING
               value: 'true'
             - name: HEARING_SUMMARIES
-              value: 'true'
+              value: 'false'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
