--- a/.k8s/live/uat/deployment.yaml
+++ b/.k8s/live/uat/deployment.yaml
@@ -68,7 +68,7 @@ spec:
             - name: HEARING
               value: 'true'
             - name: HEARING_SUMMARIES
-              value: 'true'
+              value: 'false'
             - name: DISPLAY_RAW_RESPONSES
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
