Set HEARING env to false in UAT and Production
This will be enabled in a seperate pull request.

--- a/.k8s/live/production/deployment.yaml
+++ b/.k8s/live/production/deployment.yaml
@@ -64,7 +64,7 @@ spec:
             - name: DEFENDANTS_SEARCH
               value: 'true'
             - name: HEARING
-              value: 'true'
+              value: 'false'
             - name: HEARING_SUMMARIES
               value: 'false'
             - name: RAILS_LOG_TO_STDOUT
