--- a/.k8s/live/uat/deployment.yaml
+++ b/.k8s/live/uat/deployment.yaml
@@ -66,7 +66,7 @@ spec:
             - name: DEFENDANTS_SEARCH
               value: 'true'
             - name: HEARING
-              value: 'true'
+              value: 'false'
             - name: HEARING_SUMMARIES
               value: 'false'
             - name: DISPLAY_RAW_RESPONSES
