--- a/.k8s/live/staging/deployment.yaml
+++ b/.k8s/live/staging/deployment.yaml
@@ -67,6 +67,8 @@ spec:
               value: 'true'
             - name: HEARING
               value: 'true'
+            - name: HEARING_SUMMARIES
+              value: 'false'
             - name: DISPLAY_RAW_RESPONSES
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
