Fix rubocop linting issues
Update find('#...') html element with id to find_by_id('...')

Update rubocop.yml configuration to exclude RSpec/NoExpectationExample for two feature files that have scenarios that use shared examples
instead of directly adding expects.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -144,6 +144,11 @@ RSpec/MultipleMemoizedHelpers:
 RSpec/NestedGroups:
   Max: 4
 
+RSpec/NoExpectationExample:
+  Exclude:
+    - spec/features/unlinked_defendant_flow_spec.rb
+    - spec/features/breadcrumbs_spec.rb
+
 # => Style
 Style/Documentation:
   Enabled: false
