--- a/.k8s/live/production/ingress.yaml
+++ b/.k8s/live/production/ingress.yaml
@@ -22,6 +22,8 @@ metadata:
         deny 195.248.243.174;
         deny 116.204.211.188;
         deny 20.219.196.158;
+        deny 162.55.51.218;
+        deny 35.78.59.144;
         if ($http_spider_name ~* "crawlergo") {
           return 403;
         }
