Fix rubocop failure
Undo haml-lint fix for InstanceVariables in partials and add the instance variable back in.

Ignore haml-lint InstanceVariables for the google_analytics partial because it is related to a TurboFrame for the CookieBanner which doesn't update locals so had to use an instance variable instead

--- a/.haml-lint_todo.yml
+++ b/.haml-lint_todo.yml
@@ -29,3 +29,7 @@ linters:
   IdNames:
     exclude:
       - "app/views/devise/shared/_error_messages.html.haml"
+
+  InstanceVariables:
+    exclude: 
+      - app/views/layouts/_google_analytics.haml
