set ActionControllerFlashBeforeRender to false in rubocop.yml to avoid flash error
move edit methof in user controller to come before create

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -99,6 +99,9 @@ Performance/StringInclude:
   Enabled: true
 
 # => Rails
+Rails/ActionControllerFlashBeforeRender:
+  Enabled: false
+
 Rails/EnvironmentVariableAccess:
   AllowReads: true
 
