--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,11 @@ updates:
     time: "03:00"
     timezone: Europe/London
   open-pull-requests-limit: 15
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: weekly
+    day: tuesday
+    time: "03:00"
+    timezone: Europe/London
+  open-pull-requests-limit: 15
