Revert reference parser to original committed Ignore rule Style/RedundantStringEscape on reference parser - slash is not redundant in this instance

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -207,3 +207,7 @@ Rails/I18nLocaleTexts:
 
 RSpec/VerifiedDoubleReference:
   Enabled: false
+
+Style/RedundantStringEscape:
+  Exclude: 
+    - app/services/cd_api/reference_parser_service.rb
